[package]
name = "serde_yaml_gtc"
version = "2.5.3"
# authors = ["David Tolnay <dtolnay@gmail.com>"] # Provided versions up to 0.9.34.
authors = ["Bourumir Wyngs <bourumir.wyngs@gmail.com>"]
categories = ["encoding", "parser-implementations"]
description = "Temp copy for serde_yaml_bw until version 2.5.3 is on crates. YAML support for Serde with an emphasis on panic-free parsing (including malformed YAML)."
documentation = "https://docs.rs/serde_yaml_bw/latest/serde_yaml_bw/"
edition = "2024"
keywords = ["yaml", "serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/greenticai/serde-yaml-gtc"
exclude = ["Cargo.lock"]

[dependencies]
indexmap = ">=2.0, <3"# All range tested
itoa = "1.0"
zmij = "1.0"
serde = { version = "1.0", features = ["derive"] }
unsafe-libyaml-norway = "0.2"
base64 = ">=0.21, <0.23"
saphyr-parser = "0.0.6"
regex = ">= 1.8, < 1.13"
num-traits = ">= 0.2.0, < 0.2.20"

[dev-dependencies]
anyhow = "1.0" # All range tested
indoc = "2.0"
serde_json = "1.0"
serde_bytes = "0.11"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1.20"
chrono = "0.4.41"

# For differential testing.
serde_yaml = "0.9.34"# +deprecated

[lib]
doc-scrape-examples = false

[package.metadata]
status = "maintained"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
